# libavr

./: .gitignore  CMakeLists.txt  README.md  README.textile  TODO
include/: adc.h  support.h  twi.h  uart.h
src/: adc.c  stdioconf.c  twi.c  uart.c
test/: env.sh  main.c
